<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="213dp"
        android:layout_height="215dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/qtwit"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/subheading"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/subheading"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/qtwit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/qtwit"
        app:layout_constraintTop_toBottomOf="@+id/qtwit"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/skip"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
        android:textColor="#5A5A5A"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <TextView
        android:id="@+id/qtwit"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/qtwit"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <Button
        android:id="@+id/loginbtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/signupbtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signupbtn"
        app:layout_constraintTop_toBottomOf="@+id/signupbtn"
        app:strokeColor="@color/btnstroke"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/subheading"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/subheading"
        app:layout_constraintTop_toBottomOf="@+id/subheading" />

</androidx.constraintlayout.widget.ConstraintLayout>